--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,11 @@
         justify-content: center;
         background-color: #121212;
       }
+      #fps {
+        white-space: pre;
+        font-family: monospace;
+        color: #ffffff;
+      }
     </style>
   </head>
   <body>
@@ -24,6 +29,7 @@
       javascript in your browser.</noscript
     >
     <button id="play-pause"></button>
+    <div id="fps"></div>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
